# Procedural-Terrain-Generator

./: CMakeLists.txt  Procedural Terrain Generator.sln  Procedural Terrain Generator.vcxproj  Procedural Terrain Generator.vcxproj.filters  README.md
Assets/Shaders/: main.frag  main.vert
Include/: camera.h  debugdraw.h  image_utils.h  input.h  math_helper.h  ogl.h
Include/geometry/: geometry.h  vertex_data.h
Include/terrain/: terrain.h  terrain_geometry.h  terrain_params.h
Source/: camera.cpp  debugdraw.cpp  input.cpp  main.cpp  math_helper.cpp  ogl.cpp
Source/geometry/: geometry.cpp
Source/terrain/: terrain.cpp  terrain_geometry.cpp
